# hwaccel-salsify

./: .gitignore  README.md  configure.ac
examples/: README.txt  dump2bgra.sh  dump2yuv.sh  play_raw.sh  trace.txt
src/: Makefile.am
src/hw/: Makefile.am  h264_degrader.cc  h264_degrader.hh  test.cc
src/libx264/: Makefile  Makefile.am  Makefile.in  degrade_raw_video.cc  h264_decoder.cc  h264_decoder.hh  h264_degrader.cc  h264_degrader.hh  h264_encoder.cc  h264_encoder.hh  receiver.cc  sender.cc  sreceiver.cc  ssender.cc  test_coders.cc  test_degrader.cc
src/libx264/.deps/: h264_decoder.Po  h264_degrader.Po  h264_encoder.Po  sender.Po  test.Po  test_coders.Po  test_degrader.Po
src/util/: Makefile.am
